<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="@android:color/white"
    >


    <RelativeLayout
        android:id="@+id/search_list_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#999999"
        >
        <EditText
            android:id="@+id/search_list_user"
            android:layout_width="246dp"
            android:layout_height="35dp"
            android:hint="@string/search"
            android:textSize="20sp"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:lines="1"
            android:layout_margin="6dip"
            android:layout_centerVertical="true"
            android:padding="4dip"
            android:layout_toLeftOf="@id/close_search"
            android:background="@drawable/bckgrnd_search"/>

        <Button
            android:id="@+id/search"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:text="@string/OK"


            android:gravity="center"
            android:layout_margin="5dip"
            android:background="@null"
            android:layout_toEndOf="@+id/search_list_user"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/search_list_user" />



    </RelativeLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="10dp"
        android:text="@string/user_tochat"
        android:textSize="20dp"
        android:layout_margin="10dip"
        android:layout_below="@+id/search_list_content"/>





    <ListView


        android:id="@+id/usersList_chat"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="#00000000"
        android:divider="#fff"
        android:background="@android:color/white"

         />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
